# rundo

./: Cargo.toml  README.md  rundo.db
.claude/: settings.local.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
client/: package.json
client/.claude/: settings.local.json
client/.claude-flow/data/: auto-memory-store.json  graph-state.json  pending-insights.jsonl  ranked-context.json
client/.claude-flow/sessions/: current.json
client/app/: globals.css  layout.tsx
client/app/login/: page.tsx
client/app/register/: page.tsx
client/app/rooms/: page.tsx
client/app/rooms/[id]/: page.tsx
client/components/: ChatPanel.tsx  CreateRoomDialog.tsx  VideoGrid.tsx
client/hooks/: useAuth.ts  useWebRTC.ts
client/lib/: api.ts  storage.ts
crates/server/: Cargo.toml
crates/server/migrations/: 0001_initial.sql
crates/server/src/: config.rs  error.rs  ice.rs  lib.rs  main.rs  state.rs
crates/server/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  password.rs
crates/server/src/rooms/: handlers.rs  mod.rs  peer.rs  registry.rs  room.rs
crates/server/src/sfu/: mod.rs  udp.rs
crates/server/src/signaling/: handler.rs  session.rs
crates/server/src/store/: memory.rs  mod.rs  postgres.rs  sqlite.rs
crates/server/tests/: auth_test.rs  rooms_test.rs
crates/shared/: Cargo.toml
crates/shared/src/: messages.rs  models.rs
docs/superpowers/plans/: 2026-05-01-webrtc-server.md
docs/superpowers/specs/: 2026-05-01-webrtc-server-design.md
