[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "2"
dashmap = "6"
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
rand = "0.8"
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "macros"] }

[dev-dependencies]
axum-test = "20"
